--- a/layout/_partial/footer.ejs
+++ b/layout/_partial/footer.ejs
@@ -1,4 +1,4 @@
-<footer class="page-footer bg-color">
+<footer class="page-footer footer-color">
     <%if(theme.music.enable&&theme.music.fixed){ %>
         <%- partial('_widget/music') %>
     <% } %>
