Fix : music widget title not showing

--- a/layout/_widget/music.ejs
+++ b/layout/_widget/music.ejs
@@ -6,7 +6,7 @@ var audiosJson = JSON.stringify(site.data.musics);
 <div class="music-player">
     <% if (theme.music.showTitle) { %>
         <div class="title center-align">
-            <i class="fa fa-music"></i>&nbsp;&nbsp;<%- theme.music.title %>
+            <i class="fa fa-music"></i>&nbsp;&nbsp;<%- theme.music.title.show %>
         </div>
     <% } %>
     <div class="row">
