--- a/layout/_partial/navigation.ejs
+++ b/layout/_partial/navigation.ejs
@@ -7,6 +7,7 @@
     menuMap.set("About", "关于");
     menuMap.set("Contact", "留言板");
     menuMap.set("Friends", "友情链接");
+    menuMap.set("Language", "语言");
 
     var configRoot = config.root
     configRoot = (configRoot === null || configRoot === undefined || configRoot === '/') ? '' : configRoot;
@@ -35,7 +36,7 @@
     <ul class="sub-nav menus_item_child ">
       <% for(let childrenLink of theme.menu[key].children){ %>
       <li>
-        <a href="<%- url_for(childrenLink.url)%>">
+          <a href="<%- childrenLink.url%><%- (childrenLink.url === '/')? "" : "/" %><%- relative_url("/" + config.language, url_for(page.path)) %>">
           <% if (childrenLink.icon && childrenLink.icon.length > 0) { %>
           <i class="<%- childrenLink.icon %>" style="margin-top: -20px; zoom: 0.6;"></i>
           <% } %>
