--- a/source/css/my.css
+++ b/source/css/my.css
@@ -1,9 +1,9 @@
 /* Here is your custom css styles. */
 body {
-    font-family: 'Noto Serif SC', serif;
+    font-family: 'Exo 2', sans-serif;
 }
 
 code {
-    font-family: 'Noto Serif SC', serif;
+    font-family: 'Exo 2', sans-serif;
     font-weight: bold;
 }
