Fixed js url in 404 page

--- a/layout/404.ejs
+++ b/layout/404.ejs
@@ -1,5 +1,5 @@
-<script src="<%- theme.libs.js.astro404BodyMovin %>"></script>
-<script src="<%- theme.libs.js.astro404Data %>"></script>
+<script src="<%- url_for(theme.libs.js.astro404BodyMovin) %>"></script>
+<script src="<%- url_for(theme.libs.js.astro404Data) %>"></script>
 
 <div class="bg-cover pd-header page404-cover">
     <div id="svgContainer"></div>
