--- a/layout/_partial/navigation.ejs
+++ b/layout/_partial/navigation.ejs
@@ -8,6 +8,7 @@
     menuMap.set("Contact", "留言板");
     menuMap.set("Friends", "友情链接");
     menuMap.set("Language", "语言");
+    menuMap.set("Tools", "工具箱");
 
     var configRoot = config.root
     configRoot = (configRoot === null || configRoot === undefined || configRoot === '/') ? '' : configRoot;
