Updated prompt in table2markdown

--- a/layout/_widget/table2markdown.ejs
+++ b/layout/_widget/table2markdown.ejs
@@ -10,7 +10,7 @@
     }
 
     .paste-box:empty:after {
-        content: "在这里粘贴表格";
+        content: "Paste your table here";
         font-size: 120%;
         font-style: italic;
         position: absolute;
